# faster

./: .dockerignore  .env  .env.example  .env.workers  .geminiignore  .gitignore  Makefile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  wrangler.toml
.claude/: settings.json  settings.local.json
.gemini/: commands  settings.json  settings.json.orig
.github/workflows/: deploy.yml  docker-deploy.yml
.zed/: debug.json
deployment/: README.md
deployment/cloudflare-workers/: package.json  wrangler.toml
deployment/cloudflare-workers/src/: worker.js
deployment/vps/: .env.example  docker-compose.production.yml  dynamic.yml  traefik.yml
docker/: .env.dev  .env.example  .env.prod  .env.test  .gitignore  Dockerfile  docker-compose-full.yml  docker-compose.test.yml  docker-compose.yml  kong.yml
docker/functions/: hello.ts
docs/: AGENTS.md  GEMINI.md  SQLAlchemy_2.1_Async_API_Cheatsheet.md  app_deploy.md  auth_flow.md  auth_sequence.md  docker-integration.md  docker-quick-reference.md  prompt2.md  prompt_e2e.md  prompts.md  review_result.md  schema.sql  sentry-error-handling.md  sqlite-configuration.md  tasks.md
faster/core/: bootstrap.py  builders.py  client_generator.py  config.py  database.py  event_bus.py  exceptions.py  logger.py  logging.py  models.py  plugins.py  redis.py  redisex.py  repositories.py  routers.py  schemas.py  sentry.py  services.py  utilities.py
faster/core/auth/: __init__.py  auth_proxy.py  client.py  dependencies.py  exceptions.py  middlewares.py  models.py  profile_service.py  repositories.py  router_info.py  routers.py  schemas.py  services.py  utilities.py
faster/resources/: dev-admin.html
migrations/: env.py  script.py.mako
migrations/versions/: 5f36e6c0eb24_add_user_event_table.py  7719df2d967d_initializition_setup.py  84b42a095ad6_initial_migration_with_proper_column_.py
scripts/: deploy-check.sh  health-check.sh  set-secrets-github.sh  set-secrets.sh
tests/: conftest.py  test_dev_admin_ui.py
tests/core/: conftest.py  test_auth.py  test_auth_middlewares.py  test_auth_models.py  test_auth_proxy.py  test_auth_proxy_new.py  test_auth_repositories.py  test_auth_repositories_new.py  test_auth_routers.py  test_auth_routers_new.py  test_auth_services.py  test_auth_services_new.py  test_auth_utilities.py  test_auth_utilities_new.py  test_bootstrap.py  test_builders.py  test_client_generator.py  test_client_generator_comprehensive.py  test_database.py  test_event_bus.py  test_logger.py  test_models.py  test_plugin_integration.py  test_plugins.py  test_redis.py  test_redisex.py  test_repositories.py  test_router_info.py  test_routers.py  test_schemas.py  test_sentry.py  test_utilities.py
tests/e2e/: README.md  auth_handler.py  auth_setup.py  conftest.py  convert_auth_format.py  playwright_config.py  pytest.ini  regenerate_auth.py  setup_teardown.py  test_app_state.py  test_dashboard.py  test_login_flow.py  test_login_page.py  test_metadata.py  test_onboarding.py  test_profile.py  test_rbac.py  test_request_state.py  test_session_management.py  test_sys_health.py  test_user_management.py  test_yaml_integration.py  wait_for_server.py  yaml_runner.py
tests/e2e/specs/: dashboard.yaml  login.yaml  login_page.yaml  session_management.yaml
